updating for planning next steps

--- a/blank.html
+++ b/blank.html
@@ -4,6 +4,6 @@
         <title>Generated File</title>
     </head>
     <body>
-
+        <!-- Content to be INSERTED / MANIPULATED here -->
     </body>
 </html>
